Use ReactNative and Pouchdb (add and display users and groups)

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <script src="./build.js"></script>
   </head>
   <body>
+    <div id="container" style="width:100%"></div>
     <script>
-      System.import("scripts/main.js");
+      System.import("src/main.js");
     </script>
   </body>
 </html>
